# amaf.fun

./: .cta.json  .gitignore  .prettierrc  AGENTS.md  Anchor.toml  CHANGELOG.md  CLAIM-FIX-SUMMARY.md  CONTRACT_FIX_SUMMARY.md  DEPLOYMENT_STATUS.md  DOCKER_SETUP.md  FEATURE_MARKET_RESOLUTION.md  FINAL_DEPLOYMENT_REPORT.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  INTEGRATION_SUMMARY.md  METADATA_CREATION.md  Makefile  PERMISSIONS_RESOLUTION.md  PERMISSION_FIX.md  README.md  TESTING_PLAN.md  TEST_FRESH_WALLET.md  TOKEN_DEPLOYMENT.md  analyze-account.ts  analyze-metadata-pda.ts  check-and-create-metadata.ts  check-chain-state.ts  check-counter.ts  check-market-account.ts  check-metadata.ts  check-mint.ts  check-tx-logs.ts  check-tx.ts  create-metadata-anchor.ts  create-metadata-client-side.ts  create-metadata-final.ts  create-metadata-manual-v2.ts  create-metadata-manual.ts  create-metadata-metaplex-sdk.ts  (+48 more)
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
amaf.fun/: .cta.json  package-lock.json  package.json
docs/: METAPLEX_INTEGRATION.md
plan/: fix-amaf-claim-addresses.md  implementation_plan.md
plans/: MVP-plan.md  cpmm-implementation-plan.md  daily-amaf-claim-enabled.md  enhanced-daily-claim-errors.md  mint-initialization-fix.md  outstanding-issues-TS-integration.md  outstanding-issues.md
programs/amafcoin/: Cargo.toml  Xargo.toml
programs/amafcoin/src/: lib.rs
public/: create-metadata.html
rust/: idl.json
scripts/: analyze-mints.ts  check-metadata.ts  create-metadata-account-v2.ts  create-metadata-account-v3.ts  (+21 more)
(+140 files in other folders)
