[package]
name = "amafcoin"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amafcoin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = { version = "0.32.0", features = ["mint", "token", "associated_token"] }

# Pin constant_time_eq to stable version 0.3.0 (edition 2021 compatible)
# Version 0.4.2 requires edition2024 which isn't stable in Rust 1.84.0
constant_time_eq = "=0.3.0"
